# namelessbaby

./: CITATION.cff  README.md  babynames.json  pyproject.toml
.github/actions/: action.yml  update_cff_authors.py
.github/workflows/: pr-author-check.yml  review-cff-authors-pr  review-cff-authors-pr.yml
src/namelessbaby/: namelessbaby.py
